Fix title alignment

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/sensei-domain/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/sensei-domain/style.scss
@@ -224,6 +224,10 @@
 			flex-wrap: wrap-reverse;
 		}
 
+		.domain-registration-suggestion__title {
+			align-self: unset;
+		}
+
 		.domain-registration-suggestion__badges {
 			margin-bottom: 5px;
 			margin-left: 0;
